--- a/src/components/projects/index.scss
+++ b/src/components/projects/index.scss
@@ -9,6 +9,7 @@
 	overflow: auto;
 	
 	h1.page-title {
+		color: $primary-color;
 		margin-left: 100px;
 		margin-top: 100px;
 	}
@@ -113,7 +114,7 @@
 }
 
 @media screen and (max-width: 1200px) {
-	.container.portfolio-page {
+	.container.projects-page {
 		width: 100%;
 		padding: 20px;
 		box-sizing: border-box;
@@ -126,6 +127,7 @@
 		.image-box {
 			height: 200px;
 			max-width: calc(50% - 10px);
+			flex: 1 1 50%;
 		}
 	}
 }
